# LR4

./: .clang-format  .clangd  CMakeLists.txt
Task_1/: CMakeLists.txt  app.cc  app.h  main.cc  tests.cc
Task_2/: CMakeLists.txt  app.cc  app.h  main.cc  tests.cc
Task_3/: CMakeLists.txt  app.cc  app.h  main.cc  tests.cc
include/ctoast/: array.h  array2d.h  control.h  io.h  meta.h  validation.h
lib/ctoast/: CMakeLists.txt  control.cc  io.cc
